--- a/sass/main.sass
+++ b/sass/main.sass
@@ -292,7 +292,18 @@ body
 	width: 100%
 	height: 550px
 	&__head
-		display: none
+		display: flex
+		justify-content: space-around
+		flex-direction: row
+		.numbers
+		 width: 15%
+		 height: 100%
+		 align-items: center
+		 justify-content: center
+		span
+			font-family: $bold-font
+			font-size: 40px
+			font-weight: 900
 			
 
 
