2nd block over ending

--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -6,6 +6,7 @@ $bold-font: "Proxima nova bold", sans-serif
 $light-font: "Proxima nova light", sans-serif
 $grey: #8b8b8b
 $light-grey: #d9d9d9
+$gardient:  linear-gradient(82.8deg, #FF4C8C 8.03%, #FE838A 84.1%)
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 20px
