--- a/sass/main.sass
+++ b/sass/main.sass
@@ -51,12 +51,11 @@ body
 		
 		
 	&__nav
+		display: flex
 		font-size: 0.85rem
 		text-transform: uppercase
 		align-content: center
 		align-self: center
-		justify-self: flex-end
-		justify-content: flex-end
 		margin: 0 20px 0 auto
 		&>nav>ul
 			position: relative
@@ -64,14 +63,25 @@ body
 			display: inline-flex
 			
 			&>li
-				margin: 42px 20px  0 0  
+				margin: 20px 20px  0 0
+
 				a
 					display: block
 					height: 3rem
-					padding-bottom: 42px
 					img 
 						margin: 0 5px 0 10px
+				&:nth-child(2):hover
+					&:after
+						display: none
 				&:hover 
+					&:after
+						content: ""
+						display: flex
+						height: 2.5px
+						width: 100%
+						background-image: $gardient
+						border-radius: 3px
+
 					.header__services-menu
 						display: flex
 						z-index: 1
@@ -104,7 +114,7 @@ body
 		text-decoration: none
 		position: absolute
 		left: 100px
-		top: 82px
+		top: 66px
 		margin: 0px 0px 0px 0px
 
 		ul
@@ -222,14 +232,16 @@ body
 				align-items: center
 				justify-content: space-around
 				box-shadow: 0px 3px 4px rgba(133, 133, 133, 0.5)
+				padding: 0 25px 0 25px
 				.time
 					font-weight: 600
 					display: flex
+					margin-bottom: 25px
 					flex-direction: column
 					align-items: center
 					justify-content: center
-					height: 75%
-					width: 17%
+					height: 82%
+					width: 20%
 					border: 5px solid lighten($light-grey,5)
 					border-radius: 50%
 					p
@@ -293,17 +305,42 @@ body
 	height: 550px
 	&__head
 		display: flex
+		flex: 1 1 1 1	
 		justify-content: space-around
 		flex-direction: row
+		padding-left: 100px
+		padding-right: 100px
 		.numbers
-		 width: 15%
-		 height: 100%
-		 align-items: center
-		 justify-content: center
+			width: 17%
+			height: 100%
+			border-image: $gardient 1 100%
 		span
+			display: block
+			width: 30%
+			height: 100%
 			font-family: $bold-font
-			font-size: 40px
+			font-size: 60px
 			font-weight: 900
+			&:after
+				display: flex
+				content: ""
+				background-image: linear-gradient(270deg,#bcfffc 0,#505ad5 117.69%)
+				height: 8px
+				width: 150%
+				border-radius: 4px
+		p
+			font-family: $light-font
+			font-size: 20px
+			margin-top: 25px
+	&__content
+		display: flex
+		flex-direction: column
+
+		p
+			width: 35%
+			margin: 200px 0 0 150px
+			font-family: $light-font
+			font-size: 21px
 			
 
 
