--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -7,6 +7,7 @@ $light-font: "Proxima nova light", sans-serif
 $grey: #8b8b8b
 $light-grey: #d9d9d9
 $gardient:  linear-gradient(82.8deg, #FF4C8C 8.03%, #FE838A 84.1%)
+$shadow: 0px 13px 25px rgba(50, 50, 93, 0.1), 0px 8px 16px rgba(50, 50, 93, 0.03), 0px -6px 16px rgba(50, 50, 93, 0.05)
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 20px
