--- a/sass/main.sass
+++ b/sass/main.sass
@@ -263,7 +263,7 @@ body
 		background-color: #fff
 		padding: 4%
 		top: 20%
-		left: 60%
+		left: 57%
 		border-radius: 5px
 		box-shadow: 0px 3px 4px rgba(133, 133, 133, 0.5)
 		
@@ -286,12 +286,15 @@ body
 				 font-family: $default-font
 				
 				 
-		.send
-			background-color: $accent
-			color: #ffffff
-			text-transform: uppercase
-			&:hover
-				background-color: darken($accent,3)
+.send
+	background-color: $accent
+	color: #ffffff
+	text-transform: uppercase
+	min-width: 220px
+	min-height: 60px
+	
+	&:hover
+		background-color: darken($accent,3)
 
 			
 		span 
@@ -302,7 +305,8 @@ body
 	top: calc(100%(100% + 55px))
 	margin-top: 150px
 	width: 100%
-	height: 550px
+	height: 1300px
+	
 	&__head
 		display: flex
 		flex: 1 1 1 1	
@@ -334,13 +338,74 @@ body
 			margin-top: 25px
 	&__content
 		display: flex
-		flex-direction: column
+		flex-direction: row
+		flex-wrap: wrap
+		margin: 200px 0 0 150px
+		.text
+			p
+				font-family: $light-font
+				font-size: 21px
+		.left
+			width: 37%
+			height: 60%
 
-		p
+		.polygon-illustration
+			
+			margin: -8% 0 0 10% 
+			width: 30% 
+			height: 100%
+			transform: scale(0.8)
+		.browser-illusrtation
+			transform: scale(0.8)
+			margin-left: -5%
+			width: 40%
+			height: 40% 
+			justify-self: flex-start
+			
+		.right
+			display: flex
+			justify-content: center
+			align-content: center
+			flex-direction: column
+			justify-self: flex-end
 			width: 35%
-			margin: 200px 0 0 150px
+			height: 40%
+			margin: 7% 0 0 17%
+		.send 
+			padding: 15px 45px 15px 45px
+			margin-top: 15px
+			width: 50%
+			height: 100%
+			border: 1px solid #d9d9d9
+			border-radius: 5px 
+.reasons	
+	height: 1245px
+	width: 100%
+	background: #F2F5FC
+	display: flex
+	flex-direction: row
+	flex-wrap: wrap
+	justify-content: center
+	&__head
+		width: 100%
+		height: 20%
+		display: flex
+		flex-direction: column
+		flex-wrap: wrap
+		align-content: center
+		
+		h2
+			line-height: 1.2
+    		font-weight: 700
+			padding-top: 100px
+			font-family: $bold-font
+			font-size: 2.4rem
+		p
 			font-family: $light-font
-			font-size: 21px
+			font-size: 1.3rem
+
+
+		
 			
 
 
