--- a/sass/main.sass
+++ b/sass/main.sass
@@ -401,8 +401,12 @@ body
 			font-family: $bold-font
 			font-size: 2.4rem
 		p
+			position: relative
+			left: -2%	
 			font-family: $light-font
 			font-size: 1.3rem
+			margin-top: 40px
+			
 
 
 		
