--- a/sass/main.sass
+++ b/sass/main.sass
@@ -70,6 +70,8 @@ body
 					height: 3rem
 					img 
 						margin: 0 5px 0 10px
+					embed 
+						margin: 0 5px 0 10px
 				&:nth-child(2):hover
 					&:after
 						display: none
@@ -143,8 +145,22 @@ body
 						color:#fff
 					li
 						border: none
-					img
-						color: #fff
+					embed
+						svg
+							fill: #fFF							
+					svg 
+						fill: #1bceb1
+						animation-name: change_fill
+						animation-duration: 3s
+	@keyframes change_fill
+		0%
+			fill: #49549E
+		75%
+			fill: #1bceb1
+		100% 
+			fill: #1bce4f
+							
+												
 	&__underline
 		margin-top: -35px
 .main-screen
@@ -406,6 +422,91 @@ body
 			font-family: $light-font
 			font-size: 1.3rem
 			margin-top: 40px
+
+	&__content
+		position: relative
+		transform: scale(0.8)
+		right: 8.5%
+		bottom: 10%
+	&__footer
+		img 
+			transform: scale(0.8)
+		.polygon
+			position: relative
+			bottom: 23%
+			right: 8%
+
+		.block
+			font-size: 1.3rem
+			font-family: $light-font
+			position: relative
+			width: 82%
+			height: 200px
+			display: flex
+			flex-direction: column
+			background: #FFF
+			box-shadow: 0px 13px 27px rgba(50, 50, 93, 0.1), 0px 8px 16px rgba(0, 0, 0, 0.03), 6px -6px 16px rgba(0, 0, 0, 0.05)
+			border-radius: 8px
+			padding: 20px 75px
+			bottom: 65%
+			left: 10%
+			.text
+				width: 100%
+				display: flex
+				flex-direction: row
+				p
+					padding-left: 10px
+			
+			.signature
+				display: flex
+				flex-direction: row
+				width: 100%
+				padding-left: 40px
+
+				div
+					padding-left: 10px
+					display: flex
+					flex-direction: column
+					span
+						font-family: $bold-font
+						font-weight: 900
+					p
+						position: relative
+						font-size: 1rem
+						bottom: 30%
+						width: 105%
+				.linkedin		
+					padding-left: 60%				
+					display: flex
+					flex-direction: row
+					justify-self: flex-end
+					font-family: $bold-font
+					font-size: 2.5rem
+					
+					
+					a	
+						display: flex
+						flex-direction: row
+						flex-wrap: wrap
+						justify-content: center
+						margin-bottom: 0px
+						height: 60%
+						width: 85%
+						color: black
+						border-radius: 4px
+						line-height: 0.5
+						&:hover
+							text-decoration: none
+						&:after
+							content: ""
+							display: flex
+							height: 13%
+							width: 120%
+							background-color: #505AD5
+							border-radius: 4px
+						
+		
+				
 			
 
 
