--- a/sass/main.sass
+++ b/sass/main.sass
@@ -299,6 +299,8 @@ body
 	text-transform: uppercase
 	min-width: 220px
 	min-height: 60px
+	border: 1px solid #d9d9d9
+	border-radius: 5px 
 	
 	&:hover
 		background-color: darken($accent,3)
@@ -383,10 +385,8 @@ body
 			margin-top: 15px
 			width: 50%
 			height: 100%
-			border: 1px solid #d9d9d9
-			border-radius: 5px 
 .reasons	
-	height: 1245px
+	height: 1645px
 	width: 100%
 	background: #F2F5FC
 	display: flex
@@ -418,17 +418,40 @@ body
 		position: relative
 		transform: scale(0.8)
 		right: 8.5%
-		bottom: 10%
+		bottom: 5%
 	&__footer
 		img 
 			transform: scale(0.8)
 		.polygon
 			position: relative
-			bottom: 23%
+			bottom: 13%
 			right: 8%
 			img:hover 
 				transform: rotate(-10deg) scale(0.8)
-				
+		.button
+			position: relative
+			bottom: 65%
+			left: 40%
+			width: 50%
+			
+			input
+				padding: 15px 55px 15px 55px	
+
+		.photo
+			display: flex
+			justify-content: center
+			width: 15%
+			height: 25%
+			position: relative
+			bottom: 70%
+			left: 3%
+			border-radius: 4px
+			img 
+				height: 90%
+				border: 1px solid #fff
+				border-radius: 4px
+				padding: 5px
+				background: #fff
 
 		.block
 			font-size: 1.3rem
@@ -442,7 +465,7 @@ body
 			box-shadow: 0px 13px 27px rgba(50, 50, 93, 0.1), 0px 8px 16px rgba(0, 0, 0, 0.03), 6px -6px 16px rgba(0, 0, 0, 0.05)
 			border-radius: 8px
 			padding: 25px 75px
-			bottom: 65%
+			bottom: 53%
 			left: 10%
 			&:hover .polygon
 				transform: rotate(30)
@@ -497,6 +520,7 @@ body
 							background:#505AD5
 							border-radius: 8px 
 							height: 95%
+							
 				
 							&:after
 								display: none
@@ -505,30 +529,38 @@ body
 								fill: #ffffff
 								position: relative
 								top: 10px
+								left: 3.5px
 							
 								
 	
 
 						
 						svg
-							padding-left: 10px
+							
 							width: 80%
-							transform: scale(1.1)
+							transform: scale(0.8)
 							
 
 						
 						&:after
 							position: relative
-							rigth: 10px
 							content: ""
 							display: flex
-							padding-rigpx
-							height: 13%
-							width: 100%
+							height: 10%
+							width: 85%
 							background-color: #505AD5
 							border-radius: 4px
+							
 							&:hover
 								background: #505AD5
+		.dots
+			transform: scale(0.8)
+			width: 33%
+			height: 30%
+			position: relative
+			bottom: 80%
+			left: 90%	
+			background: url(../img/_src/Dots.svg) repeat-x 							
 								
 						
 		
