--- a/sass/main.sass
+++ b/sass/main.sass
@@ -232,7 +232,8 @@ body
 				font-size: 1.3rem
 				font-weight: 50
 
-			.counter
+			.circular-timer
+				
 				width: 100%
 				height: calc( 100% - 42px )
 				display: flex
@@ -240,24 +241,56 @@ body
 				justify-content: space-around
 				box-shadow: 0px 3px 4px rgba(133, 133, 133, 0.5)
 				padding: 0 25px 0 25px
-				.time
-					font-weight: 600
+			    display: flex
+			    align-items: center
+			    justify-content: flex-start
+			    margin: 0 rem(-20)
+
+
+				.circular-timer__item
 					display: flex
-					margin-bottom: 25px
-					flex-direction: column
-					align-items: center
-					justify-content: center
-					height: 82%
-					width: 20%
-					border: 5px solid lighten($light-grey,5)
-					border-radius: 50%
-					p
+					width: 18%
+					position: relative
+					margin: 0 20(rem)
+					margin-bottom: 10px
+					
+
+
+				.circular-timer-data
+				    position: absolute
+				    top: 50%
+				    left: 0
+				    width: 100%
+				    transform: translateY(-50%)
+
+
+				.circular-timer-data > span
+				    display: block
+				    text-align: center
+				    text-transform: uppercase
+
+
+				.circular-timer-data 
+					.value
+						font-size: 32px
+						font-weight: 500
+						
+				    	
+				
+
+				.circular-timer-data 
+					.text
 						font-family: $light-font
-						text-transform: uppercase
-						margin: 0
-						font-size: 10px
-						color: darken($light-grey,25 )
-						letter-spacing: 0.2em
+						font-size: 0.6rem				 
+						line-height: rem(14)				    	
+				    	letter-spacing: 1px
+				    	margin-top: rem(8)
+				    	color: $light-grey
+
+				.circular-timer__item svg
+				    transform: rotate(-90deg)
+				    circle
+				        stroke-linecap: round
 		
 	&__form
 		display: flex
@@ -279,6 +312,9 @@ body
 			font-family: $bold-font
 			font-size: 1.4rem
 			font-weight: 700
+		span 
+			color: $grey
+			margin-top: 20px
 			
 		input
 			margin-top: 10px
@@ -306,9 +342,7 @@ body
 		background-color: darken($accent,3)
 
 			
-		span 
-			color: $grey
-			margin-top: 20px
+		
 .stat
 	position: relative
 	top: calc(100%(100% + 55px))
@@ -520,6 +554,7 @@ body
 							background:#505AD5
 							border-radius: 8px 
 							height: 95%
+							width: 95%
 							
 				
 							&:after
@@ -529,7 +564,7 @@ body
 								fill: #ffffff
 								position: relative
 								top: 10px
-								left: 3.5px
+								left: 5px
 							
 								
 	
